feat(Trip): add admin cancel trip enforce user roles update default admin email [Finishes #167614536]

--- a/UI/html/dashboard.html
+++ b/UI/html/dashboard.html
@@ -157,6 +157,10 @@
                             <div class="flex flex-card-fare">
                                 <p class="box-shadowed">$12.5</p>
                             </div>
+                            <div class="flex flex-justify-space-around box-shadowed flex-card-actions">
+                                <button class="cancel_trip flex-button-action" aria-admin-access><i
+                                        class="far fa-trash-alt flex-fare-style"></i></button>
+                            </div>
                         </div>
                     </div>
 
@@ -179,6 +183,10 @@
                         <div class="flex-card-minified">
                             <div class="flex flex-card-fare">
                                 <p class="box-shadowed">$90.5</p>
+                            </div>
+                            <div class="flex flex-justify-space-around box-shadowed flex-card-actions">
+                                <button class="cancel_trip flex-button-action" aria-admin-access><i
+                                        class="far fa-trash-alt flex-fare-style"></i></button>
                             </div>
                         </div>
                     </div>
@@ -206,6 +214,10 @@
                             <div class="flex flex-card-fare">
                                 <p class="box-shadowed">$35.5</p>
                             </div>
+                            <div class="flex flex-justify-space-around box-shadowed flex-card-actions">
+                                <button class="cancel_trip flex-button-action" aria-admin-access><i
+                                        class="far fa-trash-alt flex-fare-style"></i></button>
+                            </div>
                         </div>
                     </div>
 
@@ -228,6 +240,10 @@
                         <div class="flex-card-minified">
                             <div class="flex flex-card-fare">
                                 <p class="box-shadowed">$45.5</p>
+                            </div>
+                            <div class="flex flex-justify-space-around box-shadowed flex-card-actions">
+                                <button class="cancel_trip flex-button-action" aria-admin-access><i
+                                        class="far fa-trash-alt flex-fare-style"></i></button>
                             </div>
                         </div>
                     </div>
