--- a/UI/html/dashboard.html
+++ b/UI/html/dashboard.html
@@ -136,6 +136,34 @@
 
             <!-- Start view trips section -->
             <div id="view_trip" class="tabcontent marg-top">
+                <!-- Filter trips -->
+                <div class="filter-trips marg-top">
+                    <div class="col-md-2">
+                        <label for="country"><b>Origin</b></label>
+                        <div class="flex-input-center">
+                        <select name="country" id="user_country" class="flex-input-center">
+                            <option value="">Filter trip by origin</option>
+                            <option value="">Uvira</option>
+                            <option value="">Kinshasa</option>
+                            <option value="">Gatuna</option>
+                            <option value="">Katuna</option>
+                            <option value="">Tanzania</option>
+                        </select>
+                        </div>
+                        <div class="flex-input-center">
+                        <label for="user_city" class="flex-input-center responsive-margin-top"><b>Destination</b></label>
+                        <select name="" id="user_city" class="flex-input-center ">
+                            <option value="">Filter trip by destination</option>
+                            <option value="">Bukavu</option>
+                            <option value="">Kigali</option>
+                            <option value="">Kampala</option>
+                            <option value="">Nairobi</option>
+                            <option value="">Dar-es-salem</option>
+                        </select>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="col-md-2 flex-justify-space-evenly">
                     <!-- First trip card -->
                     <div class="flex-justify-card marg-bottom">
@@ -293,7 +321,6 @@
                 </div>
             </div>
 
-            <!-- Start bookings section -->
             <div id="bookings" class="tabcontent marg-top">
                 <div class="col-md-2 marg-top">
                     <!-- First booking card -->
@@ -316,6 +343,18 @@
                                 <span></i>16 July 2019</span>
                             </p>
                         </div>
+                        <div class="flex-card-minified" aria-user-access>
+                            <div class="flex flex-justify-space-around flex-card-actions">
+                                <button class="delete_booking flex-button-action"><i
+                                        class="far fa-trash-alt flex-fare-style"></i></button>
+                            </div>
+                        </div>
+                        <div class="flex-card-minified" aria-admin-access>
+                            <div class="flex flex-justify-space-around flex-card-actions">
+                                <button class="delete_booking flex-button-action"><i
+                                        class="fa fa-check flex-fare-style"></i></button>
+                            </div>
+                        </div>
                     </div>
 
                     <!-- Second booking card -->
@@ -337,6 +376,18 @@
                                 <span>Created on.:</span>
                                 <span></i>10 August 2019</span>
                             </p>
+                        </div>
+                        <div class="flex-card-minified" aria-user-access>
+                            <div class="flex flex-justify-space-around flex-card-actions">
+                                <button class="delete_booking flex-button-action"><i
+                                        class="far fa-trash-alt flex-fare-style"></i></button>
+                            </div>
+                        </div>
+                        <div class="flex-card-minified" aria-admin-access>
+                            <div class="flex flex-justify-space-around flex-card-actions">
+                                <button class="delete_booking flex-button-action"><i
+                                        class="fa fa-check flex-fare-style"></i></button>
+                            </div>
                         </div>
                     </div>
 
@@ -361,6 +412,18 @@
                             </p>
 
                         </div>
+                        <div class="flex-card-minified" aria-user-access>
+                            <div class="flex flex-justify-space-around flex-card-actions">
+                                <button class="delete_booking flex-button-action"><i
+                                        class="far fa-trash-alt flex-fare-style"></i></button>
+                            </div>
+                        </div>
+                        <div class="flex-card-minified" aria-admin-access>
+                            <div class="flex flex-justify-space-around flex-card-actions">
+                                <button class="delete_booking flex-button-action"><i
+                                        class="fa fa-check flex-fare-style"></i></button>
+                            </div>
+                        </div>
                     </div>
 
                     <!-- Fourth booking card -->
@@ -383,6 +446,18 @@
                                 <span></i>01 August 2019</span>
                             </p>
 
+                        </div>
+                        <div class="flex-card-minified" aria-user-access>
+                            <div class="flex flex-justify-space-around flex-card-actions">
+                                <button class="delete_booking flex-button-action"><i
+                                        class="fa fa-trash-alt flex-fare-style"></i></button>
+                            </div>
+                        </div>
+                        <div class="flex-card-minified" aria-admin-access>
+                            <div class="flex flex-justify-space-around flex-card-actions">
+                                <button class="delete_booking flex-button-action"><i
+                                        class="fa fa-check flex-fare-style"></i></button>
+                            </div>
                         </div>
                     </div>
                 </div> <!-- End of col-md-2 div-->
