ft(booking): add display user bookings [Finishes #167619436]

--- a/UI/html/dashboard.html
+++ b/UI/html/dashboard.html
@@ -293,7 +293,6 @@
                 </div>
             </div>
 
-            <!-- Start bookings section -->
             <div id="bookings" class="tabcontent marg-top">
                 <div class="col-md-2 marg-top">
                     <!-- First booking card -->
@@ -316,6 +315,18 @@
                                 <span></i>16 July 2019</span>
                             </p>
                         </div>
+                        <div class="flex-card-minified" aria-user-access>
+                            <div class="flex flex-justify-space-around flex-card-actions">
+                                <button class="delete_booking flex-button-action"><i
+                                        class="far fa-trash-alt flex-fare-style"></i></button>
+                            </div>
+                        </div>
+                        <div class="flex-card-minified" aria-admin-access>
+                            <div class="flex flex-justify-space-around flex-card-actions">
+                                <button class="delete_booking flex-button-action"><i
+                                        class="fa fa-check flex-fare-style"></i></button>
+                            </div>
+                        </div>
                     </div>
 
                     <!-- Second booking card -->
@@ -337,6 +348,18 @@
                                 <span>Created on.:</span>
                                 <span></i>10 August 2019</span>
                             </p>
+                        </div>
+                        <div class="flex-card-minified" aria-user-access>
+                            <div class="flex flex-justify-space-around flex-card-actions">
+                                <button class="delete_booking flex-button-action"><i
+                                        class="far fa-trash-alt flex-fare-style"></i></button>
+                            </div>
+                        </div>
+                        <div class="flex-card-minified" aria-admin-access>
+                            <div class="flex flex-justify-space-around flex-card-actions">
+                                <button class="delete_booking flex-button-action"><i
+                                        class="fa fa-check flex-fare-style"></i></button>
+                            </div>
                         </div>
                     </div>
 
@@ -361,6 +384,18 @@
                             </p>
 
                         </div>
+                        <div class="flex-card-minified" aria-user-access>
+                            <div class="flex flex-justify-space-around flex-card-actions">
+                                <button class="delete_booking flex-button-action"><i
+                                        class="far fa-trash-alt flex-fare-style"></i></button>
+                            </div>
+                        </div>
+                        <div class="flex-card-minified" aria-admin-access>
+                            <div class="flex flex-justify-space-around flex-card-actions">
+                                <button class="delete_booking flex-button-action"><i
+                                        class="fa fa-check flex-fare-style"></i></button>
+                            </div>
+                        </div>
                     </div>
 
                     <!-- Fourth booking card -->
@@ -383,6 +418,18 @@
                                 <span></i>01 August 2019</span>
                             </p>
 
+                        </div>
+                        <div class="flex-card-minified" aria-user-access>
+                            <div class="flex flex-justify-space-around flex-card-actions">
+                                <button class="delete_booking flex-button-action"><i
+                                        class="fa fa-trash-alt flex-fare-style"></i></button>
+                            </div>
+                        </div>
+                        <div class="flex-card-minified" aria-admin-access>
+                            <div class="flex flex-justify-space-around flex-card-actions">
+                                <button class="delete_booking flex-button-action"><i
+                                        class="fa fa-check flex-fare-style"></i></button>
+                            </div>
                         </div>
                     </div>
                 </div> <!-- End of col-md-2 div-->
