ch(Improvement): change font family change bus map booked seat color clean code and refactor [Finishes #167627318]

--- a/UI/html/dashboard.html
+++ b/UI/html/dashboard.html
@@ -284,9 +284,69 @@
                         </div>
                     </div>
                 </div>
+                <!-- View more -->
+                <div class="col-md-2 flex-justify-space-evenly" id="aria-view-more">
+                    <!-- fifth trip card -->
+                    <div class="flex-justify-card marg-bottom">
+                        <div class="flex-img-left">
+                            <img src="../assets/images/tn_trip6.jpg" alt="" class="trip_img_view">
+                        </div>
+                        <div class="flex-align-items-center">
+                            <h2 class="section-title trip-name">Mario trip</h2>
+                            <p class="align-center">
+                                <span><i class="fas fa-map-marker fg-origin"></i> Bukavu</span>
+                                <span><i class="fas fa-map-marker-alt fg-destination"></i> Kampala</span>
+                            </p>
+                            <p class="align-center pad-small">
+                                <span><i class="far fa-calendar-alt fg-origin"></i> 25 August 2019</span>
+                                <span><i class="far fa-clock fg-origin"></i> 11:30</span>
+                            </p>
+                        </div>
+                        <div class="flex-card-minified">
+                            <div class="flex flex-card-fare">
+                                <p class="box-shadowed">$35.5</p>
+                            </div>
+                            <div class="flex flex-justify-space-around box-shadowed flex-card-actions">
+                                <button class="view_specific_trip flex-button-action"><i
+                                    class="fas fa-eye "></i></button>
+                                <button class="cancel_trip flex-button-action" aria-admin-access><i
+                                        class="far fa-trash-alt flex-fare-style"></i></button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Fourth trip -->
+                    <div class="flex-justify-card marg-bottom">
+                        <div class="flex-img-left">
+                            <img src="../assets/images/tn_trip11.jpg" alt="" class="trip_img_view">
+                        </div>
+                        <div class="flex-align-items-center">
+                            <h2 class="section-title trip-name">Classic trip</h2>
+                            <p class="align-center">
+                                <span><i class="fas fa-map-marker fg-origin"></i> Bukavu</span>
+                                <span><i class="fas fa-map-marker-alt fg-destination"></i> Kampala</span>
+                            </p>
+                            <p class="align-center pad-small">
+                                <span><i class="far fa-calendar-alt fg-origin"></i> 16 August 2019</span>
+                                <span><i class="far fa-clock fg-origin"></i> 11:30</span>
+                            </p>
+                        </div>
+                        <div class="flex-card-minified">
+                            <div class="flex flex-card-fare">
+                                <p class="box-shadowed">$45.5</p>
+                            </div>
+                            <div class="flex flex-justify-space-around box-shadowed flex-card-actions">
+                                <button class="view_specific_trip flex-button-action"><i
+                                        class="fas fa-eye "></i></button>
+                                <button class="cancel_trip flex-button-action" aria-admin-access><i
+                                        class="far fa-trash-alt flex-fare-style"></i></button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <!-- VIEW MORE  -->
                 <div class="view_more align-center">
-                    <button type="button" value="" class="btn btn-primary"><i class="fas fa-angle-double-down"></i> View more</button>
+                    <button type="button" value="" class="btn btn-primary" id="btn_view_more"><i class="fas fa-angle-double-down"></i> View more</button>
                 </div>
                 <!-- End of view trips tab -->
             </div>
